# ad-bot-

./: pyproject.toml  pyrightconfig.json
src/: .env.template  config.py  database.db  main.py
src/alembic/: env.py
src/alembic/versions/: 200a1d6fba9e_change_primarykey.py  ba24e6e2f18b_initial_revision.py
src/bot/: admin_router.py  keyboards.py  main.py  middlewaries.py  state.py
src/bot/services/: admin_service.py  keyboards_service.py  message_service.py  moderator.py  printer.py
src/db/: models.py  schemas.py  session.py
src/db/repositories/: ad_repo.py  base.py  moderator_repo.py
