[project]
name = "ad-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "RKirill28",email = "pavlov26.2008@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "aiosqlite3 (>=0.3.0,<0.4.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]

[tool.poetry]
packages = [{include = "ad_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
